update menu pc and set up nav sp

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <a href="#">upgrade your browser</a> to improve your experience.
       </p>
     <![endif]-->
-    <header>
+    <header class="only-pc">
       <div class="Responsive">
         <div class="Menu">
           <div class="Menu-branch">
@@ -41,7 +41,19 @@
             </div>
             <div class="Menu-branch-search">
               <div class="Menu-branch-search-loaction">
-                <p class="Menu-branch-search-loaction__txt">Hồ Chí Minh</p>
+                <p class="js-locationBtn Menu-branch-search-loaction__txt">
+                  Hồ Chí Minh &nbsp;
+                </p>
+                <div class="js-locationMenu Menu-branch-search-loaction-select">
+                  <p class="js-locationOption">
+                    <i class="fa fa-map-marker" aria-hidden="true"></i
+                    ><span>Hà Nội &nbsp;</span>
+                  </p>
+                  <p class="js-locationOption">
+                    <i class="fa fa-map-marker" aria-hidden="true"></i
+                    ><span>Hồ Chí Minh &nbsp;</span>
+                  </p>
+                </div>
               </div>
               <div class="Menu-branch-search-input">
                 <input type="text" placeholder="search..." />
@@ -70,28 +82,44 @@
               <div class="Menu-list-item-sub">
                 <div class="Menu-list-item-sub-list">
                   <div class="Menu-list-item-sub-list-item">
-                    <a href="#" class="Menu-list-item-sub-list-item__txt">iPad Pro</a>
+                    <a href="#" class="Menu-list-item-sub-list-item__txt"
+                      >iPad Pro</a
+                    >
                   </div>
                   <div class="Menu-list-item-sub-list-item">
-                    <a href="#" class="Menu-list-item-sub-list-item__txt">iPad Pro</a>
+                    <a href="#" class="Menu-list-item-sub-list-item__txt"
+                      >iPad Pro</a
+                    >
                   </div>
                   <div class="Menu-list-item-sub-list-item">
-                    <a href="#" class="Menu-list-item-sub-list-item__txt">iPad Pro</a>
+                    <a href="#" class="Menu-list-item-sub-list-item__txt"
+                      >iPad Pro</a
+                    >
                   </div>
                   <div class="Menu-list-item-sub-list-item">
-                    <a href="#" class="Menu-list-item-sub-list-item__txt">iPad Pro</a>
+                    <a href="#" class="Menu-list-item-sub-list-item__txt"
+                      >iPad Pro</a
+                    >
                   </div>
                   <div class="Menu-list-item-sub-list-item">
-                    <a href="#" class="Menu-list-item-sub-list-item__txt">iPad Pro</a>
+                    <a href="#" class="Menu-list-item-sub-list-item__txt"
+                      >iPad Pro</a
+                    >
                   </div>
                   <div class="Menu-list-item-sub-list-item">
-                    <a href="#" class="Menu-list-item-sub-list-item__txt">iPad Pro</a>
+                    <a href="#" class="Menu-list-item-sub-list-item__txt"
+                      >iPad Pro</a
+                    >
                   </div>
                   <div class="Menu-list-item-sub-list-item">
-                    <a href="#" class="Menu-list-item-sub-list-item__txt">iPad Pro</a>
+                    <a href="#" class="Menu-list-item-sub-list-item__txt"
+                      >iPad Pro</a
+                    >
                   </div>
                   <div class="Menu-list-item-sub-list-item">
-                    <a href="#" class="Menu-list-item-sub-list-item__txt">iPad Pro</a>
+                    <a href="#" class="Menu-list-item-sub-list-item__txt"
+                      >iPad Pro</a
+                    >
                   </div>
                 </div>
               </div>
@@ -106,28 +134,44 @@
               <div class="Menu-list-item-sub">
                 <div class="Menu-list-item-sub-list">
                   <div class="Menu-list-item-sub-list-item">
-                    <a href="#" class="Menu-list-item-sub-list-item__txt">iPad Pro</a>
+                    <a href="#" class="Menu-list-item-sub-list-item__txt"
+                      >iPad Pro</a
+                    >
                   </div>
                   <div class="Menu-list-item-sub-list-item">
-                    <a href="#" class="Menu-list-item-sub-list-item__txt">iPad Pro</a>
+                    <a href="#" class="Menu-list-item-sub-list-item__txt"
+                      >iPad Pro</a
+                    >
                   </div>
                   <div class="Menu-list-item-sub-list-item">
-                    <a href="#" class="Menu-list-item-sub-list-item__txt">iPad Pro</a>
+                    <a href="#" class="Menu-list-item-sub-list-item__txt"
+                      >iPad Pro</a
+                    >
                   </div>
                   <div class="Menu-list-item-sub-list-item">
-                    <a href="#" class="Menu-list-item-sub-list-item__txt">iPad Pro</a>
+                    <a href="#" class="Menu-list-item-sub-list-item__txt"
+                      >iPad Pro</a
+                    >
                   </div>
                   <div class="Menu-list-item-sub-list-item">
-                    <a href="#" class="Menu-list-item-sub-list-item__txt">iPad Pro</a>
+                    <a href="#" class="Menu-list-item-sub-list-item__txt"
+                      >iPad Pro</a
+                    >
                   </div>
                   <div class="Menu-list-item-sub-list-item">
-                    <a href="#" class="Menu-list-item-sub-list-item__txt">iPad Pro</a>
+                    <a href="#" class="Menu-list-item-sub-list-item__txt"
+                      >iPad Pro</a
+                    >
                   </div>
                   <div class="Menu-list-item-sub-list-item">
-                    <a href="#" class="Menu-list-item-sub-list-item__txt">iPad Pro</a>
+                    <a href="#" class="Menu-list-item-sub-list-item__txt"
+                      >iPad Pro</a
+                    >
                   </div>
                   <div class="Menu-list-item-sub-list-item">
-                    <a href="#" class="Menu-list-item-sub-list-item__txt">iPad Pro</a>
+                    <a href="#" class="Menu-list-item-sub-list-item__txt"
+                      >iPad Pro</a
+                    >
                   </div>
                 </div>
               </div>
@@ -216,6 +260,26 @@
         </div>
       </div>
     </header>
+
+    <header class="only-sp">
+      <div class="Nav">
+        <div class="Nav__logo">
+          <img src="./common/img/logo.webp" alt="cellphone" />
+        </div>
+        <div class="Nav-search">
+          <div class="Nav-search-content">
+            <div class="Nav-search__input">
+              <input type="text" placeholder="Tìm sản phẩm" />
+            </div>
+            <div class="Nav-search__btn">
+              <i class="fa fa-search"></i>
+            </div>
+          </div>
+        </div>
+        <div class="Nav-hamburger"></div>
+      </div>
+    </header>
     <script src="./common/js/script.js" async defer></script>
+    <script src="./top/js/script.js" async defer></script>
   </body>
 </html>
