--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 </div>
               </div>
               <div class="Menu-branch-search-input">
-                <input type="text" placeholder="search..." />
+                <input type="text" placeholder="Search..." />
               </div>
               <div class="Menu-branch-search-btn">
                 <i class="fa fa-search"></i>
@@ -262,21 +262,62 @@
     </header>
 
     <header class="only-sp">
-      <div class="Nav">
-        <div class="Nav__logo">
-          <img src="./common/img/logo.webp" alt="cellphone" />
-        </div>
-        <div class="Nav-search">
-          <div class="Nav-search-content">
-            <div class="Nav-search__input">
-              <input type="text" placeholder="Tìm sản phẩm" />
+      <div class="js-nav Nav Nav--active">
+        <div class="Nav-content">
+          <div class="Nav__logo">
+            <img src="./common/img/logo.webp" alt="cellphone" />
+          </div>
+          <div class="Nav-search">
+            <div class="Nav-search-content">
+              <div class="Nav-search__input">
+                <input type="text" placeholder="Tìm sản phẩm" />
+              </div>
+              <div class="Nav-search__btn">
+                <i class="fa fa-search"></i>
+              </div>
             </div>
-            <div class="Nav-search__btn">
-              <i class="fa fa-search"></i>
+          </div>
+          <div class="Nav-hamburger">
+            <div class="js-navHamberger Nav-hamburger-content">
+              <span class="Nav-hamburger-content__ico"></span>
+              <span class="Nav-hamburger-content__ico"></span>
+              <span class="Nav-hamburger-content__ico"></span>
             </div>
           </div>
         </div>
-        <div class="Nav-hamburger"></div>
+        <div class="Nav-menu">
+          <div class="Nav-menu-content">
+            <div class="Nav-menu-content-list">
+              <p class="Nav-menu-content-list-item">Điện thoại</p>
+              <p class="Nav-menu-content-list-item">Tablet</p>
+              <p class="Nav-menu-content-list-item">Phụ kiện</p>
+              <p class="Nav-menu-content-list-item">Đồng hồ</p>
+              <p class="Nav-menu-content-list-item">Âm thanh</p>
+              <p class="Nav-menu-content-list-item">Laptop</p>
+              <p class="Nav-menu-content-list-item">Sim thẻ</p>
+              <p class="Nav-menu-content-list-item">Hàng củ</p>
+              <p class="Nav-menu-content-list-item">Trả góp</p>
+              <p class="Nav-menu-content-list-item">Dịch vụ</p>
+              <p class="Nav-menu-content-list-item">Khuyến mãi</p>
+              <p class="Nav-menu-content-list-item">Tin tưc</p>
+              <p class="Nav-menu-content-list-item">Thu củ đổi mới</p>
+              <p class="Nav-menu-content-list-item">Ưu đãi đối tác</p>
+            </div>
+            <div class="Nav-menu-content-footer">
+              <div class="Nav-menu-content-footer-contact">
+                <img src="./common/img/Call_TV.png" alt="phone" />
+                <a href="tel:0971717192">0971717192</a>
+              </div>
+              <div class="Nav-menu-content-footer-location">
+                <p>Nơi mua</p>
+                <select>
+                  <option value="hanoi">Hà Nội</option>
+                  <option value="hochiminh">Hồ Chí Minh</option>
+                </select>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
     </header>
     <script src="./common/js/script.js" async defer></script>
