--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
         <a href="#">upgrade your browser</a> to improve your experience.
       </p>
     <![endif]-->
+
+    <!-- Header -->
     <header class="only-pc">
       <div class="Responsive">
         <div class="Menu">
@@ -262,7 +264,7 @@
     </header>
 
     <header class="only-sp">
-      <div class="js-nav Nav Nav--active">
+      <div class="js-nav Nav">
         <div class="Nav-content">
           <div class="Nav__logo">
             <img src="./common/img/logo.webp" alt="cellphone" />
@@ -320,6 +322,59 @@
         </div>
       </div>
     </header>
+
+    <!-- Banner -->
+    <div class="Responsive">
+      <div class="Banner">
+        <div class="js-carousel Carousel">
+          <div class="js-carouselCtx Carousel-content">
+            <div class="Carousel-content-list">
+            </div>
+          </div>
+          <div class="Carousel-nav">
+            <div class="Carousel-nav-item">
+              <p class="Carousel-nav-item__txt">
+                1
+              </p>
+            </div>
+            <div class="Carousel-nav-item">
+              <p class="Carousel-nav-item__txt">
+                2
+              </p>
+            </div>
+            <div class="Carousel-nav-item">
+              <p class="Carousel-nav-item__txt">
+                3
+              </p>
+            </div>
+            <div class="Carousel-nav-item">
+              <p class="Carousel-nav-item__txt">
+                4
+              </p>
+            </div>
+            <div class="Carousel-nav-item">
+              <p class="Carousel-nav-item__txt">
+                5
+              </p>
+            </div>
+            <div class="Carousel-nav-item">
+              <p class="Carousel-nav-item__txt">
+                6
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="Banner-content">
+          <a href="#" class="Banner-content__item">
+            <img src="./common/img/qc1.webp" alt="quang cao">
+          </a>
+          <a href="#" class="Banner-content__item">
+            <img src="./common/img/qc2.webp" alt="quang cao">
+          </a>
+        </div>
+      </div>
+    </div>
+
     <script src="./common/js/script.js" async defer></script>
     <script src="./top/js/script.js" async defer></script>
   </body>
