hoan thanh phan slide

--- a/index.html
+++ b/index.html
@@ -328,48 +328,72 @@
       <div class="Banner">
         <div class="js-carousel Carousel">
           <div class="js-carouselCtx Carousel-content">
-            <div class="Carousel-content-list">
+            <div class="js-carouselList Carousel-content-list">
+              <div id="carousel1" class="Carousel-content-item">
+                <img src="./common/img/air-pods-pro.webp" />
+              </div>
+              <div id="carousel2" class="Carousel-content-item">
+                <img src="./common/img/galaxy-note-9.webp" />
+              </div>
+              <div id="carousel3" class="Carousel-content-item">
+                <img src="./common/img/iphone8-plus.webp" />
+              </div>
+              <div id="carousel4" class="Carousel-content-item">
+                <img src="./common/img/pamu-slide-plus.webp" />
+              </div>
+              <div id="carousel5" class="Carousel-content-item">
+                <img src="./common/img/redmi-note8-pro.webp" />
+              </div>
+              <div id="carousel6" class="Carousel-content-item">
+                <img src="./common/img/rog-phone-2.webp" />
+              </div>
+            </div>
+            <div class="js-carouselBtn Carousel-content__btn">
+              <i class="fa fa-angle-left" aria-hidden="true"></i>
+            </div>
+            <div class="js-carouselBtn Carousel-content__btn Carousel-content__btn--right">
+              <i class="fa fa-angle-right" aria-hidden="true"></i>
             </div>
           </div>
           <div class="Carousel-nav">
-            <div class="Carousel-nav-item">
+            <div class="js-carouselNavItem Carousel-nav-item Carousel-nav-item--active " data-index="1">
               <p class="Carousel-nav-item__txt">
-                1
+                Air Pods Pro
               </p>
             </div>
-            <div class="Carousel-nav-item">
+            <div class="js-carouselNavItem Carousel-nav-item" data-index="2">
               <p class="Carousel-nav-item__txt">
-                2
+                Galaxy Note 9
               </p>
             </div>
-            <div class="Carousel-nav-item">
+            <div class="js-carouselNavItem Carousel-nav-item" data-index="3">
               <p class="Carousel-nav-item__txt">
-                3
+                Iphone8 Plus
               </p>
             </div>
-            <div class="Carousel-nav-item">
+            <div class="js-carouselNavItem Carousel-nav-item" data-index="4">
               <p class="Carousel-nav-item__txt">
-                4
+                Pamu Slide Plus
               </p>
             </div>
-            <div class="Carousel-nav-item">
+            <div class="js-carouselNavItem Carousel-nav-item" data-index="5">
               <p class="Carousel-nav-item__txt">
-                5
+                Redmi Note8 Pro
               </p>
             </div>
-            <div class="Carousel-nav-item">
+            <div class="js-carouselNavItem Carousel-nav-item" data-index="6">
               <p class="Carousel-nav-item__txt">
-                6
+                Rog Phone II
               </p>
             </div>
           </div>
         </div>
         <div class="Banner-content">
           <a href="#" class="Banner-content__item">
-            <img src="./common/img/qc1.webp" alt="quang cao">
+            <img src="./common/img/qc1.webp" alt="quang cao" />
           </a>
           <a href="#" class="Banner-content__item">
-            <img src="./common/img/qc2.webp" alt="quang cao">
+            <img src="./common/img/qc2.webp" alt="quang cao" />
           </a>
         </div>
       </div>
