--- a/index.html
+++ b/index.html
@@ -44,16 +44,16 @@
             <div class="Menu-branch-search">
               <div class="Menu-branch-search-loaction">
                 <p class="js-locationBtn Menu-branch-search-loaction__txt">
-                  Hồ Chí Minh &nbsp;
+                  Hồ Chí Minh
                 </p>
                 <div class="js-locationMenu Menu-branch-search-loaction-select">
                   <p class="js-locationOption">
                     <i class="fa fa-map-marker" aria-hidden="true"></i
-                    ><span>Hà Nội &nbsp;</span>
+                    ><span>Hà Nội</span>
                   </p>
                   <p class="js-locationOption">
                     <i class="fa fa-map-marker" aria-hidden="true"></i
-                    ><span>Hồ Chí Minh &nbsp;</span>
+                    ><span>Hồ Chí Minh</span>
                   </p>
                 </div>
               </div>
@@ -329,22 +329,22 @@
         <div class="js-carousel Carousel">
           <div class="js-carouselCtx Carousel-content">
             <div class="js-carouselList Carousel-content-list">
-              <div id="carousel1" class="Carousel-content-item">
+              <div id="carousel1" class="Carousel-content-item" data-index="1">
                 <img src="./common/img/air-pods-pro.webp" />
               </div>
-              <div id="carousel2" class="Carousel-content-item">
+              <div id="carousel2" class="Carousel-content-item" data-index="2">
                 <img src="./common/img/galaxy-note-9.webp" />
               </div>
-              <div id="carousel3" class="Carousel-content-item">
+              <div id="carousel3" class="Carousel-content-item" data-index="3">
                 <img src="./common/img/iphone8-plus.webp" />
               </div>
-              <div id="carousel4" class="Carousel-content-item">
+              <div id="carousel4" class="Carousel-content-item" data-index="4">
                 <img src="./common/img/pamu-slide-plus.webp" />
               </div>
-              <div id="carousel5" class="Carousel-content-item">
+              <div id="carousel5" class="Carousel-content-item" data-index="5">
                 <img src="./common/img/redmi-note8-pro.webp" />
               </div>
-              <div id="carousel6" class="Carousel-content-item">
+              <div id="carousel6" class="Carousel-content-item" data-index="6">
                 <img src="./common/img/rog-phone-2.webp" />
               </div>
             </div>
@@ -357,32 +357,32 @@
           </div>
           <div class="Carousel-nav">
             <div class="js-carouselNavItem Carousel-nav-item Carousel-nav-item--active " data-index="1">
-              <p class="Carousel-nav-item__txt">
+              <p class="only-pc Carousel-nav-item__txt">
                 Air Pods Pro
               </p>
             </div>
             <div class="js-carouselNavItem Carousel-nav-item" data-index="2">
-              <p class="Carousel-nav-item__txt">
+              <p class="only-pc Carousel-nav-item__txt">
                 Galaxy Note 9
               </p>
             </div>
             <div class="js-carouselNavItem Carousel-nav-item" data-index="3">
-              <p class="Carousel-nav-item__txt">
+              <p class="only-pc Carousel-nav-item__txt">
                 Iphone8 Plus
               </p>
             </div>
             <div class="js-carouselNavItem Carousel-nav-item" data-index="4">
-              <p class="Carousel-nav-item__txt">
+              <p class="only-pc Carousel-nav-item__txt">
                 Pamu Slide Plus
               </p>
             </div>
             <div class="js-carouselNavItem Carousel-nav-item" data-index="5">
-              <p class="Carousel-nav-item__txt">
+              <p class="only-pc Carousel-nav-item__txt">
                 Redmi Note8 Pro
               </p>
             </div>
             <div class="js-carouselNavItem Carousel-nav-item" data-index="6">
-              <p class="Carousel-nav-item__txt">
+              <p class="only-pc Carousel-nav-item__txt">
                 Rog Phone II
               </p>
             </div>
