--- a/index.html
+++ b/index.html
@@ -399,6 +399,130 @@
       </div>
     </div>
 
+    <!-- Item list -->
+    <div class="Responsive">
+      <div class="Product">
+        <div class="Product-head">
+          <div class="Product-head__txt">
+            <a href="#">Điện thoại bán chạy nhất</a>
+          </div>
+          <div class="Product-head-tag">
+            <button>iPhone</button>
+            <button>Samsung</button>
+            <button>Xiaomi</button>
+            <button>OPPO</button>
+            <button>Nokia</button>
+            <button>Realmi</button>
+            <button>Vismart</button>
+          </div>
+        </div>
+        <div class="Product-content">
+          <div class="Product-content-list">
+            <div class="Product-content-item">
+              <div class="Product-content-item__img">
+                <img src="./common/img/iphone11-purple-select-2019.webp">
+              </div>
+              <div class="Product-content-item-detail">
+                <p class="Product-content-item-detail__name">iPhone 11 chinh hang</p>
+                <p class="Product-content-item-detail__price">21.390.000 đ<span>25.390.000 đ</span></p>
+                <p class="Product-content-item-detail__txt">Thu cu doi moi iPhone 11 | pro | pro max - gia thu tot nhat thi truong</p>
+              </div>
+            </div>
+            <div class="Product-content-item">
+              <div class="Product-content-item__img">
+                <img src="./common/img/iphone11-purple-select-2019.webp">
+              </div>
+              <div class="Product-content-item-detail">
+                <p class="Product-content-item-detail__name">iPhone 11 chinh hang</p>
+                <p class="Product-content-item-detail__price">21.390.000 đ<span>25.390.000 đ</span></p>
+                <p class="Product-content-item-detail__txt">Thu cu doi moi iPhone 11 | pro | pro max - gia thu tot nhat thi truong</p>
+              </div>
+            </div>
+            <div class="Product-content-item">
+              <div class="Product-content-item__img">
+                <img src="./common/img/iphone11-purple-select-2019.webp">
+              </div>
+              <div class="Product-content-item-detail">
+                <p class="Product-content-item-detail__name">iPhone 11 chinh hang</p>
+                <p class="Product-content-item-detail__price">21.390.000 đ<span>25.390.000 đ</span></p>
+                <p class="Product-content-item-detail__txt">Thu cu doi moi iPhone 11 | pro | pro max - gia thu tot nhat thi truong</p>
+              </div>
+            </div>
+            <div class="Product-content-item">
+              <div class="Product-content-item__img">
+                <img src="./common/img/iphone11-purple-select-2019.webp">
+              </div>
+              <div class="Product-content-item-detail">
+                <p class="Product-content-item-detail__name">iPhone 11 chinh hang</p>
+                <p class="Product-content-item-detail__price">21.390.000 đ<span>25.390.000 đ</span></p>
+                <p class="Product-content-item-detail__txt">Thu cu doi moi iPhone 11 | pro | pro max - gia thu tot nhat thi truong</p>
+              </div>
+            </div>
+            <div class="Product-content-item">
+              <div class="Product-content-item__img">
+                <img src="./common/img/iphone11-purple-select-2019.webp">
+              </div>
+              <div class="Product-content-item-detail">
+                <p class="Product-content-item-detail__name">iPhone 11 chinh hang</p>
+                <p class="Product-content-item-detail__price">21.390.000 đ<span>25.390.000 đ</span></p>
+                <p class="Product-content-item-detail__txt">Thu cu doi moi iPhone 11 | pro | pro max - gia thu tot nhat thi truong</p>
+              </div>
+            </div>
+            <div class="Product-content-item">
+              <div class="Product-content-item__img">
+                <img src="./common/img/iphone11-purple-select-2019.webp">
+              </div>
+              <div class="Product-content-item-detail">
+                <p class="Product-content-item-detail__name">iPhone 11 chinh hang</p>
+                <p class="Product-content-item-detail__price">21.390.000 đ<span>25.390.000 đ</span></p>
+                <p class="Product-content-item-detail__txt">Thu cu doi moi iPhone 11 | pro | pro max - gia thu tot nhat thi truong</p>
+              </div>
+            </div>
+            <div class="Product-content-item">
+              <div class="Product-content-item__img">
+                <img src="./common/img/iphone11-purple-select-2019.webp">
+              </div>
+              <div class="Product-content-item-detail">
+                <p class="Product-content-item-detail__name">iPhone 11 chinh hang</p>
+                <p class="Product-content-item-detail__price">21.390.000 đ<span>25.390.000 đ</span></p>
+                <p class="Product-content-item-detail__txt">Thu cu doi moi iPhone 11 | pro | pro max - gia thu tot nhat thi truong</p>
+              </div>
+            </div>
+            <div class="Product-content-item">
+              <div class="Product-content-item__img">
+                <img src="./common/img/iphone11-purple-select-2019.webp">
+              </div>
+              <div class="Product-content-item-detail">
+                <p class="Product-content-item-detail__name">iPhone 11 chinh hang</p>
+                <p class="Product-content-item-detail__price">21.390.000 đ<span>25.390.000 đ</span></p>
+                <p class="Product-content-item-detail__txt">Thu cu doi moi iPhone 11 | pro | pro max - gia thu tot nhat thi truong</p>
+              </div>
+            </div>
+            <div class="Product-content-item">
+              <div class="Product-content-item__img">
+                <img src="./common/img/iphone11-purple-select-2019.webp">
+              </div>
+              <div class="Product-content-item-detail">
+                <p class="Product-content-item-detail__name">iPhone 11 chinh hang</p>
+                <p class="Product-content-item-detail__price">21.390.000 đ<span>25.390.000 đ</span></p>
+                <p class="Product-content-item-detail__txt">Thu cu doi moi iPhone 11 | pro | pro max - gia thu tot nhat thi truong</p>
+              </div>
+            </div>
+            <div class="Product-content-item">
+              <div class="Product-content-item__img">
+                <img src="./common/img/iphone11-purple-select-2019.webp">
+              </div>
+              <div class="Product-content-item-detail">
+                <p class="Product-content-item-detail__name">iPhone 11 chinh hang</p>
+                <p class="Product-content-item-detail__price">21.390.000 đ<span>25.390.000 đ</span></p>
+                <p class="Product-content-item-detail__txt">Thu cu doi moi iPhone 11 | pro | pro max - gia thu tot nhat thi truong</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
     <script src="./common/js/script.js" async defer></script>
     <script src="./top/js/script.js" async defer></script>
   </body>
